--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,3 @@
-image:
-  file: .gitpod.Dockerfile
-
 tasks:
-  - init: npm install && npm run build
-    command: npm run start
+  - init: yarn
+    command: yarn dev
