--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "13.0.0",
-    "remark-html": "13.0.1"
+    "remark-html": "13.0.1",
+    "string.prototype.replaceall": "^1.0.5",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.1",
