--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "remark": "13.0.0",
     "remark-html": "13.0.1",
     "string.prototype.replaceall": "^1.0.5",
+    "sweetalert2": "^11.0.18",
     "unidecode": "^0.1.8"
   },
   "devDependencies": {
