--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-search-box": "^2.0.2",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
     "string.prototype.replaceall": "^1.0.5",
