--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "2.16.1",
     "gray-matter": "4.0.2",
     "next": "latest",
+    "next-pwa": "^5.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-search-box": "^2.0.2",
