--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "date-fns": "2.16.1",
     "gray-matter": "4.0.2",
     "next": "latest",
+    "next-pwa": "^5.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-search-box": "^2.0.2",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
     "string.prototype.replaceall": "^1.0.5",
