--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "next-pwa": "^5.2.21",
     "react": "^17.0.2",
+    "react-back-to-top-button": "^0.0.14",
     "react-dom": "^17.0.2",
     "react-search-box": "^2.0.2",
     "remark": "13.0.0",
