--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "blog-starter",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@fluentui/react": "^8.20.2",
-    "classnames": "2.2.6",
-    "date-fns": "2.16.1",
-    "gray-matter": "4.0.2",
-    "next": "^12.1.2",
-    "next-pwa": "^5.2.21",
-    "react": "^17.0.2",
-    "react-back-to-top-button": "^0.0.14",
-    "react-dom": "^17.0.2",
-    "react-search-box": "^2.0.2",
-    "remark": "13.0.0",
-    "remark-html": "13.0.2",
-    "string.prototype.replaceall": "^1.0.5",
-    "sweetalert2": "^11.0.18",
-    "unidecode": "^0.1.8"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.1",
-    "eslint": "^7.29.0",
-    "eslint-config-next": "^11.0.1",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2"
-  },
-  "license": "MIT"
+    "name": "stczpevnicek",
+    "version": "2.0.1",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@fluentui/react": "^8.20.2",
+        "classnames": "^2.2.6",
+        "date-fns": "^2.16.1",
+        "gray-matter": "^4.0.2",
+        "next": "^12.1.2",
+        "next-pwa": "^5.2.21",
+        "react": "^17.0.2",
+        "react-back-to-top-button": "^0.0.14",
+        "react-dom": "^17.0.2",
+        "react-search-box": "^2.0.2",
+        "remark": "^13.0.0",
+        "remark-html": "^13.0.2",
+        "string.prototype.replaceall": "^1.0.5",
+        "sweetalert2": "^11.0.18",
+        "unidecode": "^0.1.8"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.2.1",
+        "eslint": "^7.29.0",
+        "eslint-config-next": "^11.0.1",
+        "postcss": "^8.2.4",
+        "tailwindcss": "^2.0.2"
+    }
 }
