Fix errors, and warnings and do security updates (#116)
* Bump classnames from 2.3.1 to 2.3.2

Bumps [classnames](https://github.com/JedWatson/classnames) from 2.3.1 to 2.3.2.
- [Release notes](https://github.com/JedWatson/classnames/releases)
- [Changelog](https://github.com/JedWatson/classnames/blob/main/HISTORY.md)
- [Commits](https://github.com/JedWatson/classnames/compare/v2.3.1...v2.3.2)

---
updated-dependencies:
- dependency-name: classnames
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump react and react-dom

Bumps [react](https://github.com/facebook/react/tree/HEAD/packages/react) and [react-dom](https://github.com/facebook/react/tree/HEAD/packages/react-dom). These dependencies needed to be updated together.

Updates `react` from 17.0.2 to 18.2.0
- [Release notes](https://github.com/facebook/react/releases)
- [Changelog](https://github.com/facebook/react/blob/main/CHANGELOG.md)
- [Commits](https://github.com/facebook/react/commits/v18.2.0/packages/react)

Updates `react-dom` from 17.0.2 to 18.2.0
- [Release notes](https://github.com/facebook/react/releases)
- [Changelog](https://github.com/facebook/react/blob/main/CHANGELOG.md)
- [Commits](https://github.com/facebook/react/commits/v18.2.0/packages/react-dom)

---
updated-dependencies:
- dependency-name: react
  dependency-type: direct:production
  update-type: version-update:semver-major
- dependency-name: react-dom
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump decode-uri-component from 0.2.0 to 0.2.2

Bumps [decode-uri-component](https://github.com/SamVerschueren/decode-uri-component) from 0.2.0 to 0.2.2.
- [Release notes](https://github.com/SamVerschueren/decode-uri-component/releases)
- [Commits](https://github.com/SamVerschueren/decode-uri-component/compare/v0.2.0.

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "prebuild": "node .\\json-operations.js -m"
     },
     "dependencies": {
         "@fluentui/react": "^8.103.3",
-        "classnames": "^2.2.6",
+        "classnames": "^2.3.2",
         "date-fns": "^2.16.1",
         "gray-matter": "^4.0.2",
         "next": "^12.3.1",
         "next-pwa": "^5.2.21",
         "react": "^17.0.2",
-        "react-back-to-top-button": "^0.0.14",
         "react-dom": "^17.0.2",
         "react-search-box": "^2.3.0",
         "remark": "^14.0.2",
@@ -24,10 +24,10 @@
         "unidecode": "^0.1.8"
     },
     "devDependencies": {
+        "eslint-config-next": "^13.1.6",
+        "postcss": "^8.4.21",
         "eslint": "^8.35.0",
         "autoprefixer": "^10.4.13",
-        "eslint-config-next": "^12.3.1",
-        "postcss": "^8.4.18",
         "tailwindcss": "^3.2.7"
     }
 }
