--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# custom json files
+_songs-metadata.json
+
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
