--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "date-fns": "^2.29.3",
         "gray-matter": "^4.0.2",
         "next": "^12.3.1",
-        "next-pwa": "^5.2.21",
+        "next-pwa": "5.5.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-search-box": "^2.3.0",
