--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "date-fns": "^2.30.0",
         "gray-matter": "^4.0.2",
         "next": "^13.5.4",
-        "next-pwa": "5.5.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-search-box": "^2.3.0",
+        "@ducanh2912/next-pwa": "^9.7.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-search-box": "^3.0.0",
         "remark": "^14.0.2",
         "remark-html": "^15.0.2",
         "string.prototype.replaceall": "^1.0.7",
