--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "stczpevnicek",
     "version": "2.0.1",
+    "packageManager": "yarn@1.22.22",
     "license": "none",
     "private": true,
     "scripts": {
@@ -11,7 +12,7 @@
     },
     "dependencies": {
         "@ducanh2912/next-pwa": "^9.7.2",
-        "@fluentui/react": "^8.117.5",
+        "@fluentui/react": "^8.118.2",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "gray-matter": "^4.0.3",
@@ -29,7 +30,7 @@
         "@types/react": "^18.3.2",
         "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.19",
-        "eslint": "^9.0.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "^14.2.3",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3"
