--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "stczpevnicek",
-    "version": "2.0.1",
-    "packageManager": "yarn@1.22.22",
-    "license": "none",
+    "name": "@stccz/zpevnicek",
+    "packageManager": "yarn@4.2.2",
     "private": true,
+    "engines": {
+        "node": "^20.13.1"
+    },
     "scripts": {
         "dev": "node json-operations.js -m && next",
         "build": "next build",
